# eclogues-react

./: .gitignore  LICENSE  README.md  build.sh  eclogues-react.cabal  index.html  make.hs  stack.yaml
Static/: Html.hs
app/: Awful.hs  Components.hs  Main.hs
app/Components/: TH.hs  Types.hs
test/: HLint.hs
