name:                eclogues-react
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/rimmington/eclogues-react#readme
license:             BSD3
license-file:        LICENSE
maintainer:          Rhys Adams <rhysadams@swin.edu.au>
copyright:           2015 Rhys Adams
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable eclogues-react
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  other-modules:       Awful
                     , Components
                     , Components.TH
                     , Components.Types
  build-depends:       base
                     , react-flux
                     , eclogues
                     , servant
                     , ghcjs-servant-client
                     , either
                     , microlens
                     , microlens-th
                     , text
                     , async
                     , deepseq
                     , digital-metrology-frontiers
                     , units-defs
                     , ghcjs-base
                     , aeson
                     , path
                     , http-types
                     , template-haskell
  default-language:    Haskell2010
  cpp-options:         -DGHCJS_BROWSER

source-repository head
  type:     git
  location: https://github.com/rimmington/eclogues-react
