name:                eclogues-react
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/rimmington/eclogues-react#readme
license:             BSD3
license-file:        LICENSE
maintainer:          Rhys Adams <rhys.adams@deakin.edu.au>
copyright:           (c) 2015 Deakin Software and Technology Innovation Lab
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable eclogues-react
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fwarn-incomplete-uni-patterns -Werror
  other-modules:       Awful
  build-depends:       base
                     , react-flux
                     , flux-bootstrap
                     , eclogues
                     , servant
                     , servant-client
                     , microlens
                     , microlens-th
                     , text
                     , async
                     , deepseq
                     , digital-metrology-frontiers
                     , units-defs
                     , ghcjs-base
                     , aeson
                     , path
                     , http-types
                     , template-haskell
                     , containers
                     , network-uri
  default-language:    Haskell2010
  cpp-options:         -DGHCJS_BROWSER

test-suite eclogues-react-hlint
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             HLint.hs
  build-depends:       base
                     , process
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rimmington/eclogues-react
